# aoa-sf

./: .gitignore  CITATION.cff  README.md  pyproject.toml
examples/: example_points.json  run_example.py
src/aoa_sf/: __init__.py  cli.py  core.py  geometry.py  gui.py  plotting.py  streamlit_app.py
