[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aoa-sf"
version = "0.1.0"
description = "Angle of Attack (AoA) and Surgical Freedom (SF) and anatomical rescaling for neuroanatomical surgical maneuverability assessment "
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Leonardo Tariciotti MD", email = "leonardotariciottimd@gmail.com; leonardo.tariciotti@humanitas.it"}
]
dependencies = [
  "numpy>=1.22",
  "matplotlib>=3.6"
]

[project.optional-dependencies]
ui = [
  "streamlit>=1.28",
  "plotly>=5.18"
]

[project.scripts]
aoa_sf = "aoa_sf.cli:main"
aoa_sf_gui = "aoa_sf.gui:main"

[tool.setuptools.package-dir]
"" = "src"
